
cmake_minimum_required(VERSION 3.0)
project(vvm)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(vvm
akaykinsv.cpp akimovada.cpp artamonovav.cpp bugreevaam.cpp venediktovayap.cpp vecherskiymp.cpp denisovrv.cpp zinkinakv.cpp kaderovro.cpp kochetkovpa.cpp makarovaayu.cpp melkonyanma.cpp melyakinev.cpp negryame.cpp nikishkinev.cpp nuyanzinma.cpp pomelovaas.cpp prokopenkoas.cpp prokopenkods.cpp rodkinav.cpp ryabikinks.cpp timovkinayu.cpp turaevdv.cpp fedinda.cpp 
zhalninrv.cpp lab.cpp main.cpp)